# GaiaOptics.ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
GaiaOptics/: __main__.py  cli.py  requirements.txt
GaiaOptics.ai/: LICENSE  README.md
GaiaOptics/core/: config.py  errors.py  output.py  planner.py  problem.py  registry.py  types.py
GaiaOptics/domains/: __init__.py
GaiaOptics/domains/data_center/: constraints.py  mission.py  objective.py  workload.py
GaiaOptics/domains/microgrid/: constraints.py  dynamics.py  mission.py  objective.py
GaiaOptics/domains/warehouse_fleet/: constraints.py  defaults.yaml  mission.py  mobility.py  objective.py  tasks.py
GaiaOptics/domains/water_network/: constraints.py  hydraulics.py  mission.py  objective.py
GaiaOptics/reporting/: __init__.py  constraint_report.py  plots.py  report_md.py  summary_metrics.py
GaiaOptics/visualization/: data_center_plots.py  microgrid_plots.py  water_network_plots.py
examples/: data_center_thermal_demo.yaml  microgrid_dispatch_demo.yaml  warehouse_fleet_demo.yaml  water_network_pumping_demo.yaml
tests/: test_core_contracts.py  test_data_center_end_to_end.py  test_microgrid_end_to_end.py  test_unified_architecture.py  test_warehouse_fleet_end_to_end.py  test_water_network_end_to_end.py
